# Super-Cardano-node

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml  package.json
.github/instructions/: Copilot.instructions.md
proto/: chaindb.proto
src/: api.rs  api_grpc.rs  app_state.rs  chaindb.rs  configuration.rs  consensus.rs  handlers.rs  ledger.rs  lib.rs  lifecycle.rs  main.rs  mempool.rs  networking.rs  proto_convert.rs  protocol.rs  queries.rs  services.rs  tracing.rs  wallet.rs
src/api/: grpc.rs  mod.rs  rest.rs
src/configuration/: defaults.rs  error.rs  ledgerdb.rs  logging.rs  mod.rs  nodeaddress.rs  pom.rs  socket.rs  topology.rs  topologyp2p.rs  types.rs  validation.rs
src/configuration/sources/: cli.rs  defaults.rs  env.rs  file.rs  mod.rs
src/configuration/tests/: mod.rs
src/networking/: discovery.rs  error.rs  mod.rs  p2p.rs  peer.rs  protocols.rs
src/protocol/: allegra.rs  alonzo.rs  babbage.rs  byron.rs  conway.rs  hard_fork_combinator.rs  mary.rs  mod.rs  protocol.rs  shelley.rs  types.rs
src/tracing/: api.rs  compat.rs  consistency.rs  default_trace_config.rs  documentation.rs  formatting.rs  nodeinfo.rs  nodestartupinfo.rs  peers.rs  render.rs  staterep.rs  tracers.rs
src/wallet/: address.rs  keys.rs  mod.rs  mod.rs.bak  transaction.rs  utxo.rs
testdata/chaindb/: block_1.json  state_1.json
tests/: chaindb.rs  chaindb_app.rs  chaindb_public_api.rs  consensus.rs  hard_fork_combinator_tests.rs  integration_block_propagation.rs  ledger.rs  networking.rs  property_consensus.rs  protocol.rs  wallet.rs
