[package]
name = "Super-Cardano-node"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
bincode = "2.0.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
futures = "0.3.31"
futures-core = "0.3.31"
prost = "0.13.5"
prost-types = "0.13.5"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_yaml = { version = "0.9.34", optional = true }
tokio = { version = "1.45.0", features = ["full", "signal", "rt-multi-thread", "sync", "time", "macros", "rt"] }
tonic = { version = "0.13.1", features = ["transport"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.6.0"

[build-dependencies]
tonic-build = "0.13.1"
